# easyun-server

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  celery.sh  celery_run.sh  config.py  openapi.json  pyproject.toml  run.py  start_celery.sh
.github/: SECURITY.md
.github/workflows/: ci.yml  easyun-api.yml
deployment/: easyun.service
deployment/lambda/: easyun-inventory-database.py  easyun-inventory-secgroup.py  easyun-inventory-server.py  easyun-inventory-stblock.py  easyun-inventory-stobject.py  easyun-inventory-subnet.py
deployment/resource/: create_dynamodb.py  create_eventbridge.py  create_function.py  deploy_config.json
docs/: README_zh.md
easyun/: __init__.py  base.db  config.py
easyun/cloud/: __init__.py  aws_basic.py  aws_ebs.py  aws_ec2_ami.py  aws_ec2_instype.py  aws_price.py  aws_quota.py  aws_region.py  aws_sdk.py  base.py  basic.py  ec2_attrs.py  models.py  sdk_bucket.py  sdk_cost.py  sdk_datacenter.py  sdk_pricing.py  sdk_quotas.py  sdk_secgroup.py  sdk_server.py  sdk_staticip.py  sdk_subnet.py  sdk_tagging.py  sdk_volume.py  utils.py
easyun/common/: __init__.py  account.py  auth.py  dc_utils.py  errors.py  init_db.py  models.py  result.py  schemas.py  utils.py
easyun/config/: aws_default_parms.json  aws_ebs_types.json  (+3 more)
logs/: easyun_api1.log.1  easyun_api1.log.10  easyun_api1.log.2  easyun_api1.log.3  easyun_api1.log.5  easyun_api1.log.6  easyun_api1.log.7  easyun_api1.log.8  easyun_api1.log.9
requirements/: dev.txt  min.txt  prod.txt
scripts/: export_spec.py
tests/: conftest.py  test_api_schema.py  test_smoke.py
(+210 files in other folders)
