[project]
name = "easyun-server"
version = "0.6.0"
description = "Easyun cloud management platform API server"
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.1,<4.0",
    "APIFlask>=3.1,<4.0",
    "Flask-SQLAlchemy>=3.1,<4.0",
    "Flask-Migrate>=4.1,<5.0",
    "Flask-Cors>=6.0,<7.0",
    "boto3>=1.36,<2.0",
    "python-dotenv>=1.1,<2.0",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["easyun"]
